function calling made page based

--- a/computer-info.html
+++ b/computer-info.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Luke's Computer Info</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
     <script src="https://kit.fontawesome.com/958e18979f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="computer-info-page">
     <div class="computer-screen">
         <div class="screen-header"></div>
         <div class="screen-content">
-            <h1>My Computer info</h1>
+            <h1>My Computer Info</h1>
             <div class="computer-info">
                 <h2>Brand:</h2><p class="brand"></p>
                 <h2>Model:</h2><p class="model"></p>
                 <h2>Version:</h2><p class="version"></p>
                 <h2>Age:</h2><p class="age"></p>
-                <h2>Features:</h2><p class="features"></p>
+                <h2>Issues:</h2><p class="issues"></p>
+                <h2>Warranty:</h2><p class="warranty"></p>
             </div>
             <div class="game-container">
                 <h2>App checker</h2>
