--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="/script.js" defer></script>
     <script src="https://kit.fontawesome.com/958e18979f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="index-page">
     <div class="computer-screen">
         <div class="screen-header"></div>
         <div class="screen-content">
